/*
 * Copyright (c) Meta Platforms, Inc. and affiliates.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

//
//----------------------------------------------
//  Generate command
//----------------------------------------------
//
// When modifying this file, please run the following generate command,
// and include generated code in your commit
//
// third-party/java/protobuf/gen.sh
//
//-----------------------

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.facebook.buck.install.model";
option java_outer_classname = "InstallerProto";

package install;

service Installer {
    rpc Install(InstallInfoRequest) returns (InstallResponse) {};
    rpc FileReady(FileReadyRequest) returns (FileResponse) {};
    rpc ShutdownServer(ShutdownRequest) returns (ShutdownResponse) {};
}

message InstallInfoRequest {
    string install_id = 1;
    map<string, string> files = 2;
}

message InstallResponse{
    string install_id = 1;
}

message FileReadyRequest {
  string install_id = 1;
  string name = 2;
  string sha1 = 3;
  string path = 4;
}

message FileResponse {
  string install_id = 1;
  string name = 2;
  string path = 3;
  ErrorDetail error_detail = 4;
}

message ErrorDetail {
    //Error message
    string message = 1;
}

message ShutdownRequest {
    reserved 1;
}

message ShutdownResponse {
    reserved 1;
}
